# DSP_Plugin_Ana_Agent

./: .gitignore  README.md  config.yaml.example
companion/: pyproject.toml
companion/src/dsp_ai_advisor/: __init__.py  main.py  models.py  ws_client.py
companion/src/dsp_ai_advisor/agent/: __init__.py  agent.py  prompts.py  tools.py
companion/src/dsp_ai_advisor/llm/: __init__.py  anthropic_provider.py  base.py  config.py  openai_compat_provider.py
companion/src/dsp_ai_advisor/rule_engine/: __init__.py  logistics.py  power.py  production.py  upgrades.py
companion/src/dsp_ai_advisor/storage/: __init__.py  db.py
companion/src/dsp_ai_advisor/task_manager/: __init__.py  manager.py  models.py
companion/tests/: test_rule_engine.py  test_task_manager.py  test_ws_protocol.py
docs/superpowers/plans/: 2026-07-05-phase1-data-pipeline.md
docs/superpowers/specs/: 2026-07-05-dsp-ai-advisor-design.md
plugin/DSP_AI_Advisor/: DSP_AI_Advisor.csproj  Plugin.cs
plugin/DSP_AI_Advisor/AlertEngine/: AlertEngine.cs
plugin/DSP_AI_Advisor/DataCollectors/: GalaxyScanner.cs  ProductionCollector.cs
plugin/DSP_AI_Advisor/Models/: SnapshotData.cs  TaskItem.cs
plugin/DSP_AI_Advisor/UI/: UIManager.cs
plugin/DSP_AI_Advisor/WebSocket/: MessageCodec.cs  MessageRouter.cs  WsServer.cs
shared/: item_ids.json  protocol.md  recipe_data.json
