[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsp-ai-advisor"
version = "0.1.0"
description = "Dyson Sphere Program AI production optimization companion"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DSP AI Advisor Team"}
]

dependencies = [
    "websockets>=12.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
gui = ["pyside6>=6.5"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]

[project.scripts]
dsp-ai-advisor = "dsp_ai_advisor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
